# libprimis

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README  README.md  annotated.html  annotated_dup.js  classSoundEngine-members.html  classSoundEngine.html  classSoundEngine.js  classcube-members.html  classcube.html  classcube.js  classcubeworld-members.html  classcubeworld.html  classcubeworld.js  classes.html  classmatrix3-members.html  classmatrix3.html  classmatrix3.js  classprop_1_1Property-members.html  classprop_1_1Property.html  classprop_1_1Property.js  classprop_1_1PropertyMeta-members.html  classprop_1_1PropertyMeta.html  classprop_1_1PropertyMeta.js  command_8h.html  command_8h.js  command_8h_source.html  consts_8h.html  consts_8h.js  consts_8h_source.html  cube_8h.html  cube_8h_source.html  dir_10e7c0f1162619d79ac1e2722ec6e40f.html  dir_10e7c0f1162619d79ac1e2722ec6e40f.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+250 more)
.github/workflows/: clang.yml  doxyfile.yml  makefile.yml  msbuild.yml  test.yml
.semaphore/: semaphore.yml
bin_unix/: readme.txt
config/: default.cfg  default_map_models.cfg  default_map_settings.cfg  font.cfg  game.cfg  glsl.cfg  heightmap.cfg  server-init.cfg  sound.cfg  stdedit.cfg  stdlib.cfg  ui.cfg
config/glsl/: aa.cfg  ao.cfg  decal.cfg  deferred.cfg  edit.cfg  fxaa.cfg  gi.cfg  grass.cfg  material.cfg  model.cfg  particle.cfg  postfx.cfg  scale.cfg  shared.cfg  sky.cfg  smaa.cfg  tonemap.cfg  volumetric.cfg  world.cfg
config/ui/: edithud.cfg  fkey.cfg  hud.cfg  lib.cfg  options.cfg  scoreboard.cfg  serverbrowser.cfg  stats.cfg  style.cfg
doc/: Doxyfile  design.md  engine.md  interface.md  tesseract-renderer.md  timeline.md
doc/Doxygen-resources/: header.html
doc/dev/: IQM Tools - Github.URL  IQM Tools.URL  Ragdoll Tools.URL  ref_CubeScript.URL  ref_Miscellaneous.txt  ref_ui.cfg  todo_nieb.txt
doc/dev/old/: 2014-05-12_default_map_settings.cfg
doc/pics/: README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  (+73 more)
src/: Makefile  readme_sauerbraten.txt  readme_tesseract.txt
src/engine/: aa.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  client.cpp  command.cpp  console.cpp  dynlight.cpp  engine.h  explosion.h  grass.cpp  hitzone.h  iqm.h  lensflare.h  light.cpp  light.h  lightning.h  main.cpp  master.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  mpr.h  normal.cpp  obj.h  octa.cpp  octa.h  octaedit.cpp  octarender.cpp  pch.cpp  physics.cpp  python.cpp  python.h  ragdoll.h  rendergl.cpp  (+22 more)
src/engine/interface/: client.cpp  command.cpp  console.cpp  console.h  control.cpp  control.h  cs.h  cubestd.cpp  input.cpp  input.h  menus.cpp  menus.h  server.cpp  serverbrowser.cpp  sound.cpp  sound.h  textedit.cpp  textedit.h  ui.cpp  ui.h
src/engine/model/: animmodel.cpp  animmodel.h  gltf.cpp  gltf.h  gltfloader.cpp  gltfloader.h  hitzone.cpp  hitzone.h  md5.cpp  md5.h  model.h  obj.cpp  obj.h  ragdoll.cpp  ragdoll.h  skelmodel.cpp  skelmodel.h  vertmodel.cpp  vertmodel.h
src/engine/render/: aa.cpp  aa.h  ao.cpp  ao.h  csm.cpp  csm.h  grass.cpp  grass.h  hdr.cpp  hdr.h  hud.cpp  hud.h  imagedata.cpp  imagedata.h  lightsphere.cpp  lightsphere.h  normal.cpp  normal.h  octarender.cpp  octarender.h  postfx.cpp  postfx.h  radiancehints.cpp  radiancehints.h  renderalpha.cpp  renderalpha.h  rendergl.cpp  rendergl.h  renderlights.cpp  renderlights.h  rendermodel.cpp  rendermodel.h  renderparticles.cpp  renderparticles.h  rendersky.cpp  rendersky.h  rendertext.cpp  rendertext.h  rendertimers.cpp  rendertimers.h  (+18 more)
src/engine/world/: bih.cpp  bih.h  dynlight.cpp  dynlight.h  entities.cpp  entities.h  explosion.h  heightmap.cpp  heightmap.h  hitzone.h  light.cpp  light.h  material.cpp  material.h  mpr.cpp  mpr.h  octa.cpp  octa.h  octacube.cpp  octacube.h  octaedit.cpp  octaedit.h  octaworld.cpp  octaworld.h  physics.cpp  physics.h  raycube.cpp  raycube.h  world.cpp  world.h  worldio.cpp  worldio.h
src/game/: ai.cpp  ai.h  aiman.h  client.cpp  cserver.cpp  ctf.h  edit.cpp  entities.cpp  extinfo.h  game.cpp  game.h  gameclient.cpp  main.cpp  pch.cpp  render.cpp  scoreboard.cpp  server.cpp  serverbrowser.cpp  waypoint.cpp  weapon.cpp
src/shared/: command.h  consts.h  crypto.cpp  cube.h  ents.h  geom.cpp  geom.h  geomexts.h  glemu.cpp  glemu.h  glexts.h  hashtable.h  iengine.h  igame.h  matrix.cpp  pch.cpp  stream.cpp  stream.h  tessfont.c  tools.cpp  tools.h  zip.cpp
src/vcpp/: libprimis.sln  libprimis.vcxproj  libprimis.vcxproj.filters  tesseract.cbp  tesseract.rc  tesseract.sln  tesseract.vcxproj  tesseract.vcxproj.filters
src/xcode/tesseract.xcodeproj/: project.pbxproj
test/: Makefile  README.md  libprimis.h  main.cpp  process.sh  testanimmodel.cpp  testanimmodel.h  testbih.cpp  testbih.h  testcs.cpp  testcs.h  testgeom.cpp  testgeom.h  testgeomexts.cpp  testgeomexts.h  testgltfloader.cpp  testgltfloader.h  testidents.cpp  testidents.h  testmatrix.cpp  testmatrix.h  testmd5.cpp  testmd5.h  testmpr.cpp  testmpr.h  testocta.cpp  testocta.h  testprops.cpp  testprops.h  testragdoll.cpp  testragdoll.h  testshadowatlas.cpp  testshadowatlas.h  testskel.cpp  testskel.h  testslot.cpp  testslot.h  testutils.cpp  testutils.h
test/gltf/: box.gltf  braces.gltf  brackets.gltf  obj_cube.gltf  obj_cube_minified.gltf  obj_cube_missing_vertex.gltf  obj_cube_tabs.gltf  twocube.gltf
