cmake_minimum_required(VERSION 3.21)
project(libprimis)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/engine/interface)
include_directories(src/engine/model)
include_directories(src/engine/render)
include_directories(src/engine/world)
include_directories(src/libprimis-headers)
include_directories(src/libprimis-headers/3rdparty)
include_directories(src/libprimis-headers/3rdparty/headers)
include_directories(src/shared)
include_directories(test)

add_executable(libprimis
        src/engine/interface/command.cpp
        src/engine/interface/console.cpp
        src/engine/interface/console.h
        src/engine/interface/control.cpp
        src/engine/interface/control.h
        src/engine/interface/cs.h
        src/engine/interface/cubestd.cpp
        src/engine/interface/input.cpp
        src/engine/interface/input.h
        src/engine/interface/menus.cpp
        src/engine/interface/menus.h
        src/engine/interface/sound.cpp
        src/engine/interface/textedit.cpp
        src/engine/interface/textedit.h
        src/engine/interface/ui.cpp
        src/engine/interface/ui.h
        src/engine/model/animmodel.cpp
        src/engine/model/animmodel.h
        src/engine/model/hitzone.cpp
        src/engine/model/hitzone.h
        src/engine/model/md5.cpp
        src/engine/model/md5.h
        src/engine/model/model.h
        src/engine/model/obj.cpp
        src/engine/model/obj.h
        src/engine/model/ragdoll.cpp
        src/engine/model/ragdoll.h
        src/engine/model/skelmodel.cpp
        src/engine/model/skelmodel.h
        src/engine/model/vertmodel.cpp
        src/engine/model/vertmodel.h
        src/engine/render/aa.cpp
        src/engine/render/aa.h
        src/engine/render/ao.cpp
        src/engine/render/ao.h
        src/engine/render/csm.cpp
        src/engine/render/csm.h
        src/engine/render/grass.cpp
        src/engine/render/grass.h
        src/engine/render/hdr.cpp
        src/engine/render/hdr.h
        src/engine/render/hud.cpp
        src/engine/render/hud.h
        src/engine/render/imagedata.cpp
        src/engine/render/imagedata.h
        src/engine/render/normal.cpp
        src/engine/render/octarender.cpp
        src/engine/render/octarender.h
        src/engine/render/radiancehints.cpp
        src/engine/render/radiancehints.h
        src/engine/render/renderalpha.cpp
        src/engine/render/renderalpha.h
        src/engine/render/rendergl.cpp
        src/engine/render/rendergl.h
        src/engine/render/renderlights.cpp
        src/engine/render/renderlights.h
        src/engine/render/rendermodel.cpp
        src/engine/render/rendermodel.h
        src/engine/render/renderparticles.cpp
        src/engine/render/renderparticles.h
        src/engine/render/rendersky.cpp
        src/engine/render/rendersky.h
        src/engine/render/rendertext.cpp
        src/engine/render/rendertext.h
        src/engine/render/rendertimers.cpp
        src/engine/render/rendertimers.h
        src/engine/render/renderva.cpp
        src/engine/render/renderva.h
        src/engine/render/renderwindow.cpp
        src/engine/render/renderwindow.h
        src/engine/render/shader.cpp
        src/engine/render/stain.cpp
        src/engine/render/stain.h
        src/engine/render/texture.cpp
        src/engine/render/texture.h
        src/engine/render/water.cpp
        src/engine/render/water.h
        src/engine/world/bih.cpp
        src/engine/world/bih.h
        src/engine/world/dynlight.cpp
        src/engine/world/dynlight.h
        src/engine/world/entities.cpp
        src/engine/world/entities.h
        src/engine/world/heightmap.cpp
        src/engine/world/light.cpp
        src/engine/world/light.h
        src/engine/world/material.cpp
        src/engine/world/material.h
        src/engine/world/mpr.cpp
        src/engine/world/mpr.h
        src/engine/world/octaedit.cpp
        src/engine/world/octaedit.h
        src/engine/world/octaworld.cpp
        src/engine/world/octaworld.h
        src/engine/world/physics.cpp
        src/engine/world/physics.h
        src/engine/world/raycube.cpp
        src/engine/world/raycube.h
        src/engine/world/world.cpp
        src/engine/world/world.h
        src/engine/world/worldio.cpp
        src/engine/world/worldio.h
        src/libprimis-headers/3rdparty/headers/begin_code.h
        src/libprimis-headers/3rdparty/headers/close_code.h
        src/libprimis-headers/3rdparty/headers/SDL.h
        src/libprimis-headers/3rdparty/headers/SDL_assert.h
        src/libprimis-headers/3rdparty/headers/SDL_atomic.h
        src/libprimis-headers/3rdparty/headers/SDL_audio.h
        src/libprimis-headers/3rdparty/headers/SDL_blendmode.h
        src/libprimis-headers/3rdparty/headers/SDL_clipboard.h
        src/libprimis-headers/3rdparty/headers/SDL_config.h
        src/libprimis-headers/3rdparty/headers/SDL_config_minimal.h
        src/libprimis-headers/3rdparty/headers/SDL_cpuinfo.h
        src/libprimis-headers/3rdparty/headers/SDL_endian.h
        src/libprimis-headers/3rdparty/headers/SDL_error.h
        src/libprimis-headers/3rdparty/headers/SDL_events.h
        src/libprimis-headers/3rdparty/headers/SDL_filesystem.h
        src/libprimis-headers/3rdparty/headers/SDL_gamecontroller.h
        src/libprimis-headers/3rdparty/headers/SDL_gesture.h
        src/libprimis-headers/3rdparty/headers/SDL_haptic.h
        src/libprimis-headers/3rdparty/headers/SDL_hints.h
        src/libprimis-headers/3rdparty/headers/SDL_image.h
        src/libprimis-headers/3rdparty/headers/SDL_joystick.h
        src/libprimis-headers/3rdparty/headers/SDL_keyboard.h
        src/libprimis-headers/3rdparty/headers/SDL_keycode.h
        src/libprimis-headers/3rdparty/headers/SDL_loadso.h
        src/libprimis-headers/3rdparty/headers/SDL_locale.h
        src/libprimis-headers/3rdparty/headers/SDL_log.h
        src/libprimis-headers/3rdparty/headers/SDL_main.h
        src/libprimis-headers/3rdparty/headers/SDL_messagebox.h
        src/libprimis-headers/3rdparty/headers/SDL_metal.h
        src/libprimis-headers/3rdparty/headers/SDL_misc.h
        src/libprimis-headers/3rdparty/headers/SDL_mixer.h
        src/libprimis-headers/3rdparty/headers/SDL_mouse.h
        src/libprimis-headers/3rdparty/headers/SDL_mutex.h
        src/libprimis-headers/3rdparty/headers/SDL_opengl.h
        src/libprimis-headers/3rdparty/headers/SDL_opengl_glext.h
        src/libprimis-headers/3rdparty/headers/SDL_pixels.h
        src/libprimis-headers/3rdparty/headers/SDL_platform.h
        src/libprimis-headers/3rdparty/headers/SDL_power.h
        src/libprimis-headers/3rdparty/headers/SDL_quit.h
        src/libprimis-headers/3rdparty/headers/SDL_rect.h
        src/libprimis-headers/3rdparty/headers/SDL_render.h
        src/libprimis-headers/3rdparty/headers/SDL_rwops.h
        src/libprimis-headers/3rdparty/headers/SDL_scancode.h
        src/libprimis-headers/3rdparty/headers/SDL_sensor.h
        src/libprimis-headers/3rdparty/headers/SDL_shape.h
        src/libprimis-headers/3rdparty/headers/SDL_stdinc.h
        src/libprimis-headers/3rdparty/headers/SDL_surface.h
        src/libprimis-headers/3rdparty/headers/SDL_system.h
        src/libprimis-headers/3rdparty/headers/SDL_thread.h
        src/libprimis-headers/3rdparty/headers/SDL_timer.h
        src/libprimis-headers/3rdparty/headers/SDL_touch.h
        src/libprimis-headers/3rdparty/headers/SDL_version.h
        src/libprimis-headers/3rdparty/headers/SDL_video.h
        src/libprimis-headers/3rdparty/headers/zconf.h
        src/libprimis-headers/3rdparty/headers/zlib.h
        src/libprimis-headers/command.h
        src/libprimis-headers/consts.h
        src/libprimis-headers/cube.h
        src/libprimis-headers/ents.h
        src/libprimis-headers/geom.h
        src/libprimis-headers/glemu.h
        src/libprimis-headers/glexts.h
        src/libprimis-headers/iengine.h
        src/libprimis-headers/octa.h
        src/libprimis-headers/texture.h
        src/libprimis-headers/tools.h
        src/libprimis-headers/world.h
        src/shared/geom.cpp
        src/shared/geomexts.h
        src/shared/glemu.cpp
        src/shared/glemu.h
        src/shared/glexts.h
        src/shared/matrix.cpp
        src/shared/stream.cpp
        src/shared/stream.h
        src/shared/tools.cpp
        src/shared/zip.cpp
        test/libprimis.h
        test/main.cpp
        test/testutils.cpp
        test/testutils.h)
